# curses_solitaire

./: README.md  pyproject.toml  solitaire.py
src/curses_solitaire/: solitaire.py
src/curses_solitaire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
