[project]
name = "curses_solitaire"
version = "0.0.1"
authors = [
  { name="Austin Mount", email="austin@adrenlinerush.net" },
]
description = "Curses based Solitaire in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
[project.urls]
"Homepage" = "https://github.com/adrenlinerush/curses_solitaire"

[project.scripts]
solitaire = "curses_solitaire.solitaire:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

